--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs,.ts,.tsx,.cts,.mts --fix --ignore-path .gitignore"
   },
   "dependencies": {
+    "axios": "^1.6.8",
     "vue": "^3.4.21",
     "vue-router": "^4.3.0"
   },
@@ -33,6 +34,7 @@
     "typescript": "~5.4.0",
     "vite": "^5.1.6",
     "vite-plugin-vue-devtools": "^7.0.18",
+    "vite-plugin-vue-setup-extend": "^0.4.0",
     "vitest": "^1.4.0",
     "vue-tsc": "^2.0.6"
   }
